@@ -1,5 +1,4 @@
 class Admin::ArticlesController < Admin::BaseController
-  member_actions.push(*%w(index show new create comments approve unapprove destroy_comment edit update))
   skip_before_filter :login_required
   with_options :only => [:create, :update, :destroy, :upload] do |c|
     c.before_filter :set_default_section_ids
@@ -179,6 +178,6 @@ class Admin::ArticlesController < Admin::BaseController
     end
     
     def allow_member?
-      @article ? (@article.user_id == current_user.id) : (action_name == 'upload')
+      action_name != 'destroy' || (@article && @article.user_id == current_user.id)
     end
 end
